codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__renders_command_labels_within_one_call.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Explored
  └ rg shimmer_spans
    cat shimmer.rs
    cat status_indicator_widget.rs
