codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__renders_duplicate_read_commands.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Explored
  └ cat auth.rs
    cat auth.rs
    cat shimmer.rs
